--- a/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
@@ -131,13 +131,16 @@
                         </p:submenu>
                         <p:submenu id="om_components" label="Master Data"
                                    icon="fa fa-fw fa-table">
-                            <p:menuitem id="om_company" value="Company"
+                            <p:menuitem id="hr_company" value="Company"
                                         icon="fa fa-fw fa-sitemap"
-                                        outcome="/company/company.xhtml" />
-                            <p:menuitem id="om_prodmaster" value="Product"
+                                        outcome="/hr/company.xhtml" />
+                            <p:menuitem id="pr_businesspartner" value="Business Partner"
+                                        icon="fa fa-fw fa-sitemap"
+                                        outcome="/hr/company.xhtml" />
+                            <p:menuitem id="inv_prodmaster" value="Product"
                                         icon="fa fa-fw fa-sitemap" update=":mainform"
                                         outcome="/inventory/prodmaster.xhtml" />
-                            <p:menuitem id="om_accmaster" value="Accounts"
+                            <p:menuitem id="acc_accmaster" value="Accounts"
                                         icon="fa fa-fw fa-sitemap" 
                                         outcome="/accmaster.xhtml" />
                         </p:submenu>
