--- a/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
@@ -136,7 +136,7 @@
                                         outcome="/hr/company.xhtml" />
                             <p:menuitem id="pr_businesspartner" value="Business Partner"
                                         icon="fa fa-fw fa-sitemap"
-                                        outcome="/hr/company.xhtml" />
+                                        outcome="/pr/businesspartnerlist.xhtml" />
                             <p:menuitem id="inv_prodmaster" value="Product"
                                         icon="fa fa-fw fa-sitemap" update=":mainform"
                                         outcome="/inventory/prodmaster.xhtml" />
