--- a/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
@@ -142,7 +142,7 @@
                                         outcome="/inventory/prodmaster.xhtml" />
                             <p:menuitem id="acc_accmaster" value="Accounts"
                                         icon="fa fa-fw fa-sitemap" 
-                                        outcome="/accmaster.xhtml" />
+                                        outcome="/accounts/coa.xhtml" />
                         </p:submenu>
                     </pc:menu>
                 </h:form>
