--- a/src/main/resources/META-INF/resources/california-layout/template.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/template.xhtml
@@ -55,6 +55,8 @@
         </div>
 
         <!--<h:outputStylesheet name="css/pfcrud.css"/>-->
+        <h:outputStylesheet library="webjars" name="font-awesome/5.12.0/css/all.min-jsf.css" />
+        <h:outputStylesheet library="webjars" name="font-awesome/5.12.0/css/v4-shims.min-jsf.css" />
         <h:outputStylesheet name="css/nanoscroller.css" library="california-layout" />
         <h:outputStylesheet name="css/layout-#{guestPreferences.theme}.css" library="california-layout" />
     </h:body>
